# Tella-compiler

./: .gitignore  ASoutput.s  CMakeLists.txt  README.MD  test.c
include/: charcheck.h  lexer.h  main.h  mainHelper.h  tokenizer.h
include/IntermediateRep/: IRheader.h  helperFuncIR.h  printIR.h  structIR.h
include/assemblyInstr/: assemblyInstrHeader.h  builtInFunctions.h  helperFuncAS.h  structAS.h
include/lexer/: charcheck.h  lexer.h  readFile.h  tokenizer.h
include/machineCode/: machineCodeHeader.h
include/parser/: ast.h  grammarRules.h  helperFunc.h
include/preprocess/: preprocess.h
include/semanticAnalyser/: helperFuncAnalyser.h  nodeAnalyser.h  struct.h
myLibc/: myLibc.c  myLibc.h
source/: charcheck.c  lexer.c  main.c  mainHelper.c  toenizer.c
source/IntermediateRep/: helperFuncIR.c  printIR.c
source/IntermediateRep/IR/: blockIR.c  expressionIR.c  forIR.c  funCallIR.c  funcDefIR.c  ifStmtIR.c  programIR.c  returnIR.c  rodataIR.c
source/assemblyInstr/: helperFuncAS.c  mainAssemblyInstr.c
source/lexer/: charcheck.c  readFile.c  tokenHelper.c  tokenizer.c
source/machineCode/: machineCode.c  programMC.c
source/parser/: helperFunc.c
source/preprocess/: preprocess.c
source/semanticAnalyser/: helperFuncAnalyser.c
tests/: includeTest.c  test  test.c  test1  test1.c  test10  test10.c  test11  test11.c  test12  test12.c  test13  test13.c  test14  test14.c  test15  test15.c  test16  test16.c  test2  test2.c  test3  test3.c  test4  test4.c  test5  test5.c  test6  test6.c  test7  test7.c  test8  test8.c  test9  test9.c
(+51 files in other folders)
